Adds report
